# weakly-queueish-structures

./: CMakeLists.txt  Dict.cpp  Dict.h  SearchStructure.cpp  SearchStructure.h  VecDict.h  WeaklyQueueishDict.cpp  WeaklyQueueishDict.h  WeaklyQueueishSearch.cpp  WeaklyQueueishSearch.h  WeaklyQueueishVecDict.h  main.cpp
build-dir/: .~lock.output.csv#  CMakeCache.txt  Makefile  cmake_install.cmake  output.csv  weakly_queueish_structures
generics_attempt/: SearchStructure.h  Test.cpp  Test.h  WeaklyQueueishSearch.cpp  WeaklyQueueishSearch.h
test_results/: bestcase-comp.csv  perfect-workflow-diff-numelems.csv  workflow-comp.csv
